feat: implement BankingInfoController (all tests passed)